--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <meta name="theme-color" content="#7f0909" />
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://ekuhn08.github.io/HP-Prompts/" />
+  <link rel="canonical" href="https://ekuhn08.github.io/harry-potter-game/" />
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ekuhn08.github.io/HP-Prompts/" />
-  <meta property="og:title" content="Numerology Class & A Magical Sorting Hat Game" />
+  <meta property="og:url" content="https://ekuhn08.github.io/harry-potter-game/" />
+  <meta property="og:title" content="Harry Potter Guessing Game" />
   <meta property="og:description" content="Enter the Numerology Class, prove your magical skills, and discover your Hogwarts house. A fun fantasy coding project using JavaScript." />
   <meta property="og:image" content="https://i.imgur.com/emcFR8C.png" />
 
   <!-- Twitter Card -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://ekuhn08.github.io/HP-Prompts/" />
+  <meta property="twitter:url" content="https://ekuhn08.github.io/harry-potter-game/" />
   <meta property="twitter:title" content="Numerology Class – Hogwarts Sorting Game" />
   <meta property="twitter:description" content="Guess the magic number and get sorted into your Hogwarts house. An interactive fantasy game coded in JavaScript." />
   <meta property="twitter:image" content="https://i.imgur.com/emcFR8C.png" />
